--- a/style/kelat.css
+++ b/style/kelat.css
@@ -1173,30 +1173,47 @@ html.android-4 .AccordionItemCon {
  -webkit-align-self:center;
          align-self:center
 }
-.RangeSlider input[type=range]{position:relative;height:28px;width:100%;margin:4px 0 5px 0;border:none;
+.RangeSlider input[type=range]{position:relative;height:20px;width:100%;margin:0;border:none;
 -webkit-appearance:none;
    -moz-appearance:none;
      ms-appearance:none;
         appearance:none;
-background:-webkit-gradient(linear,50% 0,50% 100%,color-stop(0,#b7b8b7),color-stop(100%,#b7b8b7));
-background:linear-gradient(to right,#b7b8b7 0,#b7b8b7 100%);
-background-position:center;
-background-size:100% 2px;
-background-repeat:no-repeat;
+background: -webkit-gradient(linear, 50% 0, 50% 100%, color-stop(0, #b9b9b9), color-stop(100%, #b9b9b9));
+background: linear-gradient(to right, #b9b9b9 0, #b9b9b9 100%);
+background-position: center;
+background-size: 100% 2px;
+background-repeat: no-repeat;
 outline:0;
 box-sizing:content-box;
 -ms-background-position-y:500px
 }
-.RangeSlider input[type="range"]:after{position:absolute;height:2px;background:#fff;content:'';width:5px;top:50%;margin-top:-1px;left:-5px;z-index:1}
+.RangeSlider input[type="range"]:focus,
+.RangeSlider input[type="range"]:active{border:0;outline:0 none;}
 .RangeSlider input[type="range"]::-webkit-slider-thumb{position:relative;border:none;height:28px;width:28px;background:none;
 -webkit-appearance:none;
    -moz-appearance:none;
     -ms-appearance:none;
-        appearance:none
-}
-.RangeSlider input[type="range"]::-webkit-slider-thumb:after{position:absolute;top:0;left:0;height:28px;width:28px;content:'';background:#fff;border-radius:28px;z-index:10;
-box-shadow:0 2px 4px rgba(0, 0, 0, 0.4)}
-.RangeSlider input[type="range"]::-webkit-slider-thumb:before{position:absolute;top:50%;right:100%;width:2000px;height:2px;margin-top:-1px;background:#007aff;content:'';z-index:1}
+        appearance:none}
+.RangeSlider input[type="range"]::-webkit-slider-thumb{position:relative;height:20px;width:20px;border:none;background:#2196f3;border-radius:20px;outline:0;
+-webkit-appearance:none;
+   -moz-appearance:none;
+	-ms-appearance:none;
+		appearance:none;}
+.RangeSlider input[type="range"]::-webkit-slider-thumb:before{position:absolute;top:50%;right:100%;width:2000px;height:2px;margin-top:-1px;z-index:1;background:#2196f3;content:' ';}
+.RangeSlider input[type="range"]::-moz-range-track{width:100%;height:2px;background:#b7b8b7;border:none;outline:0;}
+.RangeSlider input[type="range"]::-moz-range-thumb{position:relative;height:20px;width:20px;border:none;background:#2196f3;border-radius:20px;outline:0;
+-webkit-appearance:none;
+   -moz-appearance:none;
+	-ms-appearance:none;
+		appearance:none;}
+.RangeSlider input[type="range"]::-ms-track{width:100%;height:2px;cursor:pointer;background:transparent;border-color:transparent;color:transparent;}
+.RangeSlider input[type="range"]::-ms-thumb{position:relative;height:20px;width:20px;border:none;background:#2196f3;border-radius:20px;outline:0;
+-webkit-appearance:none;
+   -moz-appearance:none;
+	-ms-appearance:none;
+		appearance:none;}
+.RangeSlider input[type="range"]::-ms-fill-lower{background:#2196f3;}
+.RangeSlider input[type="range"]::-ms-fill-upper{background:#b7b8b7;}
 
 /*===== 短标 =====*/
 .Short{font-size:13px;font-weight:400;color:rgba(0,0,0,.87);background:rgba(0,0,0,.12);display:inline-block;height:32px;line-height:32px;border-radius:16px;padding:0 12px;vertical-align:middle;margin:2px 0;
