--- a/style/kelat.css
+++ b/style/kelat.css
@@ -2654,7 +2654,7 @@ box-sizing:border-box;}
 .BackToTop .IGoTop{display:block;width:100%;height:100%;background:url(../images/backToTop.png) no-repeat center;background-size:cover;opacity:0.8;}
 
 /**/
-.MainHeader{position:relative;max-height:100px;z-index:100?border-bottom:1px solid #eee;}
+.MainHeader{position:relative;max-height:100px;z-index:100;border-bottom:1px solid #eee;}
 .MainHeader .Logo{display:block;float:left;height:50px;line-height:50px;text-align:center;font-size:20px;width:230px;padding:0 15px;overflow:hidden;
 -webkit-transition: width .3s ease-in-out;
 -o-transition: width .3s ease-in-out;
