增加$$.unPopup()方法
Change-Id: I90273f5fc9de625ec2cc9eb09067e5d96f8d98a9

--- a/style/kelat.css
+++ b/style/kelat.css
@@ -93,7 +93,7 @@ abbr[title]{border-bottom:1px dotted}
 
 /* ===== 连接 ===== */
 a{background-color:transparent;outline:0}
-a:focus{outline:thin dotted}
+a:focus,
 a:active,
 a:hover{outline:0}
 ins,
