--- a/style/kelat.css
+++ b/style/kelat.css
@@ -225,6 +225,7 @@ color:#333333;
 font-size:1.6rem;
 }
 
+
 /* ===== 栅格系统 ===== */
 .Row{
 box-sizing:border-box;
@@ -2202,7 +2203,7 @@ align-items:center;
 -webkit-align-items:flex-end;
         align-items:flex-end
 }
-
+/*
 html.android-4 .Box .BoxHeader,
 html.android-4 .Box .BoxFooter{
 display:-webkit-box;
@@ -2210,7 +2211,7 @@ display:block;
 }
 html.android-4 .Box .BoxFooter a.Link, 
 html.android-4 .Box .BoxHeader a.Link{float:left;padding:0 8px}
-
+*/
 
 /*块级卡片*/
 .BoxBlock{border-radius:0;margin-left:0;margin-right:0}
@@ -2455,7 +2456,7 @@ html.WithStatusbarOverlay body .Wrapper{padding-top:20px}
 
 /* ===== 定义宽度 ===== */
 .WAll,
-.WAllFluid{width:auto;margin:0 auto;position:relative;padding:1px 0;z-index:1}
+.WAllFluid{width:auto;margin:0 auto;position:relative;padding:0;z-index:1}
 .WAllFluid{width:100%}
 .WAll::after,
 .WAllFluid::after{display:block;clear:both;content:"";visibility:hidden;height:0}
