--- a/style/kelat.css
+++ b/style/kelat.css
@@ -2650,6 +2650,21 @@ html.WithStatusbarOverlay body .WrapHeader{top:auto}
     .BotNav .BotNavItem{position:relative}
     .BotNav .Lump{box-sizing:border-box}
 
+.Footer{color:#999;font-size:14px;text-align:center;padding-bottom:0.5em}	
+.Footer .FooterLinks{font-size:0}	
+.Footer .FooterLinks a{color:#586c94}	
+.Footer .FooterLinks .ItemLink{display:inline-block;vertical-align:top;margin:0 .62em;position:relative;font-size:14px;}	
+.Footer .FooterLinks .ItemLink:before {content:" ";position:absolute;width:1px;left:-.65em;top:.36em;bottom:.36em;
+border-left:1px solid #c7c7c7;color:#c7c7c7;
+-webkit-transform-origin:0 0;
+		transform-origin:0 0;
+-webkit-transform:scaleX(.5);
+		transform:scaleX(.5);
+}
+.FooterFixedBottom{position:fixed;bottom:.52em;left:0;right:0}
+.Footer .FooterLinks .ItemLink:first-child:before {display:none}	
+.Footer .FooterText{padding:0 .34em;font-size:12px;}	
+
 /*内容区域*/
 .WrapHeader + .WrapContent{padding-top:45px}
 .WrapFooter + .WrapContent{padding-bottom:45px}
